welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:6: error: illegal start of simple expression
		else return die1+die2
                ^